--- a/views/login.ejs
+++ b/views/login.ejs
@@ -34,10 +34,10 @@
 				<h2 class="products-title">Ingresar</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<form action="/profile" method="GET" class=""> 
-				<label>USUARIO</label><input class="input" name ="usuario" type="email" placeholder="mail">
+			<form action="/users/login" method="POST" class=""> 
+				<label>USUARIO</label><input class="input" name ="email" type="email" placeholder="mail">
 				<br><br>
-				<label>CONTRASEÑA</label><input class="input" name="recordarme" type="password" placeholder="Contraseña">
+				<label>CONTRASEÑA</label><input class="input" name="contrasena" type="password" placeholder="Contraseña">
 				<br><br>
 				<label>Recordarme</label><input  name="recordarme" class="checkbox" type="checkbox" placeholder="Recordarme">
 				<br><br>
