--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,7 +40,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="/users">Ingresá <i class="fas fa-sign-in-alt"></i></a>
+						<a href="/users/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
 					</li>
 				</ul>
 			</nav>
