--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -38,7 +38,7 @@
 						</a>
 					</li>
 					<li>
-						<form action="/logout" method="POST">
+						<form action="/users/logout" method="POST">
 							<button class="logout" type="submit">
 								Cerrar sesión <i class="cerrarsesion"></i>
 							</button>
