--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -34,7 +34,7 @@
 	
 				<ul class="right-navbar">
 					<li><a href="/profile">
-						<%- usuario %>  <i class="fas fa-user"></i>
+						<%= locals.user.username %>  <i class="fas fa-user"></i>
 						</a>
 					</li>
 					<li>
