modelos nombre ok

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -32,7 +32,7 @@
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title"> <%= usuario %>
+					<h1 class="main-title"> <%= datosUsuario.username %>
 						<a href="./profile/editar">
 							<i class="fas fa-cog"></i>
 						</a>
@@ -59,6 +59,9 @@
 			</div>
 			<!-- Show mis productos -->
 <section class="bloque">
+
+	<% if (lista && lista.length > 0) { %>
+
 <% for (let i=0; i<10; i++) { %>
 	<div class="col-12 col-sm-6 col-lg-3">
 			<section class="product-box">
@@ -75,6 +78,7 @@
 				</a>
 			</section>
 		</div>
+		<% } %>
 	<% } %>
 </div>
 </div>
