--- a/views/register.ejs
+++ b/views/register.ejs
@@ -51,7 +51,11 @@
 		<br><br>
 		<button class="boton" type="submit"> REGISTRARME </button>
 		<br><br>
-	</form>
+	</form> 
+	
+	<% if(locals.errors){  %> 
+		<p class= “error”> <%= errors.message %> </p>
+	 <% } %>
 				<img src="/images/3201052.png" alt="" class="registrafoto">
 				
 	<!-- footer -->
