--- a/views/register.ejs
+++ b/views/register.ejs
@@ -52,11 +52,11 @@
 		<button class="boton" type="submit"> REGISTRARME </button>
 		<br><br>
 	</form> 
-	
+
 	<% if(locals.errors){  %> 
 		<p class= “error”> <%= errors.message %> </p>
 	 <% } %>
-				<img src="/images/3201052.png" alt="" class="registrafoto">
+				<img src="../images/3201052.png" alt="" class="registrafoto">
 				
 	<!-- footer -->
 	<%- include('./partials/footer') %>
