--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -34,11 +34,8 @@
 	
 				<ul class="right-navbar">
 					<li><a href="/profile">
-						<%= locals.user.username %>  <i class="fas fa-user"></i>
+						<p>Hola, <%= locals.user.username %> <i class="fas fa-user"></i> </p>
 						</a>
-					</li>
-					<li>
-						
 					</li>
 				</ul>
 
