--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -36,6 +36,7 @@
 
 
 				<section class="bloque">
+					<% if (lista != undefined && lista.length > 0) { %>
 					<%for (let i=0; i<lista.length; i++){ %>
 						<div class="col-12 col-sm-6 col-lg-3">
 							<section class = 'product-box'>
@@ -54,14 +55,18 @@
 								</a>
 							</section>
 						</div>
-						<%}%>
+						
+						<%} %>
+
+						<% } else {%> 
+					
+							<p class= “error”> <%= errors.message %> </p>
+						 <% } %>
 			</div>
 		</div>
 		</section>
 
-		<% if(locals.errors){  %> 
-			<p class= “error”> <%= errors.message %> </p>
-		 <% } %>
+		
 
 		<!-- footer -->
 		<%- include('./partials/footer') %>
