--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -33,7 +33,7 @@
 				</ul>
 	
 				<ul class="right-navbar">
-					<li><a href="/profile">
+					<li><a href="/profile/<%= locals.user.username %>">
 						<p>Hola, <%= locals.user.username %> <i class="fas fa-user"></i> </p>
 						</a>
 					</li>
