--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,9 +10,9 @@
 			<!-- Font Awesome Stylesheet -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 	<!-- Bootstrap Grid Stylesheet -->
-	<link rel="stylesheet" href="./css/bootstrap-grid.min.css">
+	<link rel="stylesheet" href="../css/bootstrap-grid.min.css">
 	<!-- Own Stylesheet -->
-	<link rel="stylesheet" href="./css/app.css">
+	<link rel="stylesheet" href="../css/app.css">
 </head>
 <body>
 	<!-- Header -->
@@ -28,7 +28,7 @@
 	<section class="info-usuario container products-wrapper">
 		<div class="row">
 			<div class="img-container offset-3 col-2">
-				<img src="images/Captura de Pantalla 2023-04-10 a la(s) 19.23.58.png" alt="foto de perfil" class="foto-perfil">
+				<img src="../images/Captura de Pantalla 2023-04-10 a la(s) 19.23.58.png" alt="foto de perfil" class="foto-perfil">
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
