--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -40,17 +40,25 @@
 					<%for (let i=0; i<lista.length; i++){ %>
 						<div class="col-12 col-sm-6 col-lg-3">
 							<section class = 'product-box'>
-								<a href="/products/detalle/id/<%=lista[i].id%>">
 									<figure class="product-box_image">
 										<img src="<%= lista[i].imagen %>" alt="<%= lista[i].nombre %>">
 									</figure>
 									<article class="product-box_data">
 										<h2>
+											<a href="/products/detalle/id/<%=lista[i].id%>">
+
 											<%= lista[i].nombreproducto %>
+											</a>
 										</h2>
+					
 										<p>
 											<%= lista[i].descripcionproducto %>
-										</p>	
+										</p>
+										<h5>
+											<a href ="/profile/<%=lista[i].usuario.username%>" >
+											<%= lista[i].usuario.username %>
+										</a>
+										</h5>	
 									</article>
 								</a>
 							</section>
