punto 6 falta fotos

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -60,20 +60,14 @@
 			<!-- Show mis productos -->
 <section class="bloque">
 
-	<% if (lista && lista.length > 0) { %>
+	<% if (datosUsuario.productos.length > 0) { %>
 
-<% for (let i=0; i<10; i++) { %>
+<% for (let i=0; i<datosUsuario.productos.length; i++) { %>
 	<div class="col-12 col-sm-6 col-lg-3">
 			<section class="product-box">
-				<a href= "/products/detalle/id/<%=lista[i].id%>">
-					<figure class="product-box_image">
-						<img src="<%=lista[i].imagen%>" alt="<%=lista[i].nombre%>">
-					</figure>
+				<a href= "/products/detalle/id/<%=datosUsuario.productos[i].id%>">
 					<article class="product-box_data">
-						<h2> <%= lista[i].nombre%> </h2>
-						<p><%= lista[i].Técnica%></p>
-						<p><%= lista[i].Dimensiones%></p>
-						<p><%= lista[i].Creación%></p>
+						<h2> <%= datosUsuario.productos[i].nombreproducto%> </h2>
 					</article>
 				</a>
 			</section>
