--- a/views/product.ejs
+++ b/views/product.ejs
@@ -28,7 +28,8 @@
 		<div class="d-flex align-items-center">
 			<h2 class="products-title">Venus de Milo</h2> 
 			<p class="product-detail-description">
-				<a href="/profile">Agregar a mis productos</a>
+				<a href ="/profile/<%=lista[i].usuario.username%>" >
+
 			</p>
 		</div>
 
