--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,11 +9,12 @@
 				</div>
 	
 				<div class="col-7 col-md-6">
-					<form action="/search-results method="GET" class="search-form">
-						<input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
+					<form action="/search-results/" method="GET" class="search-form">
+						<input type="text" name="search" placeholder="Buscar productos" class="search-form_input">
 						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
 					</form>
 				</div>
+	
 
 				<div class="col-7 col-md-6">
 					<form action="/search-results/users" method="GET" class="search-form">
