--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -10,10 +10,19 @@
 
 				<div class="col-7 col-md-6">
 					<form action="/search-results" method="GET" class="search-form">
-						<input type="text" name="search" placeholder="Buscar productos, marcas y más" class="search-form_input">
+						<input type="text" name="search" placeholder="Buscar productos" class="search-form_input">
 						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
 					</form>
 				</div>
+
+				<div class="col-7 col-md-6">
+					<form action="/search-results/users" method="GET" class="search-form">
+						<input type="text" name="search" placeholder="Buscar usuarios" class="search-form_input">
+						<button type="submit" class="search-form_button"><i class="fas fa-search"></i></button>
+					</form>
+				</div>
+	
+
 
 				<div class="col-12 col-md-4">
 					<a class="main-header_credit-link">
