--- a/views/product.ejs
+++ b/views/product.ejs
@@ -28,7 +28,7 @@
 		<div class="d-flex align-items-center">
 			<h2 class="products-title">Venus de Milo</h2> 
 			<p class="product-detail-description">
-				<a href ="/profile/<%=lista[i].usuario.username%>" >
+				<a href ="/profile/<%=datosproducto.usuario.username%>" >
 
 			</p>
 		</div>
@@ -48,9 +48,8 @@
 				<section class="comments">
 					<% for (let i=0; i<5; i++) { %>
 						<div class="col-12 col-lg-4">
-								<a href= "/products/detalle/id/<%=comentarios[i].id%>">
 									<p class="user">
-										<strong> <a href="/profile"><%=comentarios[i].user%></a> </strong>
+										<strong> <a href="/profile"><%=datosproducto.comentarios[i].user%></a> </strong>
 										<%=comentarios[i].comment%></p>
 									<article class="product-box_data">
 										
