cargar prod intento

--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -31,7 +31,7 @@
 				<h2 class="products-title">Agregar productos</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<form action="/add" method="POST" class=""> <!-- aca antes decia login.html -->
+			<form action="/product/add" method="POST" class=""> <!-- aca antes decia login.html -->
 				<label class="imagennn">IMAGEN</label><input type="file" placeholder="FOTO DE PRODUCTO">
 				<label class="input" name="nombreproducto">NOMBRE DE PRODUCTO</label><input type="text" placeholder="NOMBRE PRODUCTO">
 				<label class="input" name="descripcionproducto">DESCRIPCION</label><input type="text" placeholder="DESCRIPCION PRODUCTO">
