--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -37,8 +37,8 @@
 
 				<section class="bloque">
 					<% if (lista != undefined && lista.length > 0) { %>
-					<%for (let i=0; i<lista.length; i++){ %>
-						<div class="col-12 col-sm-6 col-lg-3">
+						<% for (let i = lista.length - 1; i >= 0; i--) { %>
+							<div class="col-12 col-sm-6 col-lg-3">
 							<section class = 'product-box'>
 									<figure class="product-box_image">
 										<img src="<%= lista[i].imagen %>" alt="<%= lista[i].nombre %>">
