--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -33,7 +33,7 @@
 		</div>
 		<!-- Show the "ultimos" products -->
 
-		<form action="/profile" method="GET" class="registroform"> <!-- aca antes decia login.html -->
+		<form action="/profile" method="POST" class="registroform"> <!-- aca antes decia login.html -->
 			<label class = "registroformlabel">EMAIL</label><input type="email" placeholder="EMAIL" class = "registroinput">			<label class = "registroformlabel">NOMBRE DE USUARIO</label><input type="text" placeholder="USUARIO" class = "registroinput">
 			<label class = "registroformlabel">CONTRASEÑA</label><input type="password" placeholder="CONTRASEÑA" class = "registroinput">
 			<label class = "registroformlabel">FECHA DE NACIMIENTO</label><input type="date" placeholder="FECHA NACIMIENTO" class = "registroinput">
