--- a/views/login.ejs
+++ b/views/login.ejs
@@ -45,7 +45,7 @@
 				<br><br>
 				<label>CONTRASEÑA</label><input class="input" name="contrasena" type="password" placeholder="Contraseña">
 				<br><br>
-				<label>Recordarme</label><input  name="recordarme" class="checkbox" type="checkbox" placeholder="Recordarme">
+				<label>Recordarme</label><input  name="checkbox" class="checkbox" type="checkbox" placeholder="Recordarme">
 				<br><br>
 				<button  class="boton"  type="submit"> Iniciar sesión </button>
 			</form>
