--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -55,7 +55,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Mis productos</h2>
+				<h2 class="products-title">Mis productos: <%=datosUsuario.productos.length %></h2> 
 				<p>Ordenados del más al menos reciente</p>
 			</div>
 			<!-- Show mis productos -->
