--- a/views/product.ejs
+++ b/views/product.ejs
@@ -48,10 +48,10 @@
 				</article>
 
 				<section class="comments">
-					<% for (let i=0; i<5; i++) { %>
+					<% for (let i = datosproducto.comentarios.length - 1; i >= 0; i--) { %>
 						<div class="col-12 col-lg-4">
 									<p class="user">
-										<strong> <a href="/profile"><%=datosproducto.comentarios[i].user%></a> </strong>
+										<strong> <a href="/profile/<%=datosproducto.comentarios[i].usuario.username%>"><%=datosproducto.comentarios[i].usuario.username%></a> </strong>
 										<%=datosproducto.comentarios[i].texto_comentario%>
 									</p>
 									<article class="product-box_data">
@@ -64,8 +64,8 @@
 						</article>
 
 					</section>
-					<form class="form" action="" method="GET">
-						<input class="form-input" type="text" value="" placeholder="Agregar comentario">
+					<form class="form" action="" method="POST">
+						<input name="comentario" class="form-input" type="text" value="" placeholder="Agregar comentario">
 						<button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
 					</form>
 					<hr>
