--- a/views/product.ejs
+++ b/views/product.ejs
@@ -66,7 +66,7 @@
 					</section>
 					<form class="form" action="" method="POST">
 						<input name="comentario" class="form-input" type="text" value="" placeholder="Agregar comentario">
-						<button type="submit" class="buy-now-button">AGREGAR COMENTARIO</button>
+						<button type="submit" class="buy-now-button">Agregar comentario (solo usuarios logueados)</button>
 					</form>
 					<hr>
 				</div>
