--- a/views/product.ejs
+++ b/views/product.ejs
@@ -54,8 +54,8 @@
 
 									<% if(locals.user !=undefined) { %>
 										<section class="comments">
-											<form class="form" action="" method="GET">
-														<input class="form-input" type="text" value=""
+											<form class="form" action="" method="POST">
+														<input class="form-input" type="text" value="" name="comentario"
 															placeholder="Agregar comentario">
 														<button type="submit" class="buy-now-button">AGREGAR
 															COMENTARIO</button>
