--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,7 +41,7 @@
 					<p class= “error”> <%= errors.message %> </p>
 				 <% } %>
 	
-				<label>USUARIO</label><input class="input" name ="email" type="email" placeholder="mail">
+				<label>EMAIL</label><input class="input" name ="email" type="email" placeholder="mail">
 				<br><br>
 				<label>CONTRASEÑA</label><input class="input" name="contrasena" type="password" placeholder="Contraseña">
 				<br><br>
