--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -30,6 +30,7 @@
 			<div class="row">
 				<div class="col-12">
 					<h2 class="products-title">Resultados que coinciden con su búsqueda:</h2>
+					<p>Ordenados del más al menos reciente</p>
 				</div>
 				<!-- Show the "ultimos" products -->
 
