intentando cargar imgs, vayan al .sql y carguenlas en sus compus

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -45,7 +45,8 @@
 							<div class="product-detail">
 								<div class="row">
 									<article class="col-12 col-lg-8 product-detail-info">
-										<img src="" alt="PONER IMAGENES EN MODELO Y COMPLETAR ESTO"
+										<!-- <img src="/images/venusdemilo.webp" alt="" class="product-detail-img"> -->
+										<img src="<%=datosproducto.imagenproducto%>" alt=""
 											class="product-detail-img">
 										<p class="product-detail-description">
 											<%=datosproducto.descripcionproducto%>
@@ -79,7 +80,7 @@
 
 
 													<% } else { %>
-														<h1>Es necesario que este logueado para comentar </h1>
+														<h3>Es necesario que este logueado para comentar </h3>
 														<% } %>
 
 
