HAY IMAGENES LOCO

--- a/views/product.ejs
+++ b/views/product.ejs
@@ -46,7 +46,7 @@
 								<div class="row">
 									<article class="col-12 col-lg-8 product-detail-info">
 										<!-- <img src="/images/venusdemilo.webp" alt="" class="product-detail-img"> -->
-										<img src="<%=datosproducto.imagenproducto%>" alt=""
+										<img src="<%=datosproducto.imagenes%>" alt="xxx"
 											class="product-detail-img">
 										<p class="product-detail-description">
 											<%=datosproducto.descripcionproducto%>
