PROFILE EDIT OKKKKKK

--- a/views/partials/headerLogueado.ejs
+++ b/views/partials/headerLogueado.ejs
@@ -49,7 +49,7 @@
 				</ul>
 
 				<ul class="right-navbar">
-					<li><a href="/profile/editar">Editar perfil <i class="fas fa-sign-in-alt"></i></a>
+					<li><a href="/profileEdit/">Editar perfil <i class="fas fa-sign-in-alt"></i></a>
 					</li>	
 				</ul>
 				
