--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -41,7 +41,7 @@
 				</div>
 				<div>
 					<ul class="">
-				
+						<li>8 productos</li>
 						<li>2000 seguidores</li>
 						<li>300 comentarios</li>
 					</ul>
