--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -42,7 +42,7 @@
 							<div class="col-12 col-sm-6 col-lg-3">
 							<section class = 'product-box'>
 									<figure class="product-box_image">
-										<img src="<%= lista[i].imagen %>" alt="<%= lista[i].nombre %>">
+										<img src="<%= lista[i].imagenes %>" alt="<%= lista[i].nombreproducto %>">
 									</figure>
 									<article class="product-box_data">
 										<h2>
