--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -33,7 +33,7 @@
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
 					<h1 class="main-title"> <%= datosUsuario.username %>
-						<a href="./profile/editar">
+						<a href="/profileEdit">
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
@@ -55,7 +55,7 @@
 	<div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Mis productos: <%=datosUsuario.productos.length %></h2> 
+				<h2 class="products-title">Productos: <%=datosUsuario.productos.length %></h2> 
 				<p>Ordenados del más al menos reciente</p>
 			</div>
 			<!-- Show mis productos -->
