--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -34,11 +34,12 @@
 		<!-- Show the "ultimos" products -->
 
 		<form action="/profileEdit/" method="POST" class="registroform"> <!-- aca antes decia login.html -->
-			<label class = "registroformlabel">EMAIL</label><input type="email" placeholder="EMAIL" class = "registroinput">			<label class = "registroformlabel">NOMBRE DE USUARIO</label><input type="text" placeholder="USUARIO" class = "registroinput">
-			<label class = "registroformlabel">CONTRASEÑA</label><input type="password" placeholder="CONTRASEÑA" class = "registroinput">
-			<label class = "registroformlabel">FECHA DE NACIMIENTO</label><input type="date" placeholder="FECHA NACIMIENTO" class = "registroinput">
-			<label class = "registroformlabel">NUMERO DE DOCUMENTO</label><input type="number" placeholder="NRO DOCUMENTO" class = "registroinput"> 
-			<label class = "registroformlabel">FOTO DE PERFIL</label><input type="text" placeholder="FOTO DE PERFIL" class = "registroinput">
+			<label class = "registroformlabel">EMAIL</label><input name="email" type="email" placeholder="EMAIL" class = "registroinput">			
+			<label class = "registroformlabel">NOMBRE DE USUARIO</label><input name="username" type="text" placeholder="USUARIO" class = "registroinput">
+			<label class = "registroformlabel">CONTRASEÑA</label><input name="contrasena" type="password" placeholder="CONTRASEÑA" class = "registroinput">
+			<label class = "registroformlabel">FECHA DE NACIMIENTO</label><input name="fecha" type="date" placeholder="FECHA NACIMIENTO" class = "registroinput">
+			<label class = "registroformlabel">NUMERO DE DOCUMENTO</label><input name="dni" type="number" placeholder="NRO DOCUMENTO" class = "registroinput"> 
+			<label class="imagennn">FOTO DE PERFIL</label><input type="file" name="imagenes" accept="image/*" placeholder="FOTO DE PERFIL"> 
 			<button type="submit" class = "registrobutton"> CONFIRMAR CAMBIOS </button>
 		</form>
 
