--- a/views/register.ejs
+++ b/views/register.ejs
@@ -53,7 +53,7 @@
 		<br><br>
 		<label>NUMERO DE DOCUMENTO</label><input class="input" type="number" name="dni" placeholder="NRO DOCUMENTO">
 		<br><br> 
-		<label>FOTO DE PERFIL</label><input class="input" type="text" name="fotodeperfil" placeholder="FOTO DE PERFIL">
+		<label class="imagennn">FOTO DE PERFIL</label><input type="file" name="imagenes" accept="image/*" placeholder="FOTO DE PERFIL"> 
 		<br><br>
 		<button class="boton" type="submit"> REGISTRARME </button>
 		<br><br>
