--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,15 +37,15 @@
 		<div class="container products-wrapper">
 			<div class="row">
 				<div class="col-12">
-					<h2 class="products-title">Obras de arte más recientes</h2>
+					<h2 class="products-title">Obras de arte más buscadas</h2>
 				</div>
 
 				<section class="bloque">
-					<% for (let i = lista.length - 1; i >= lista.length - 6; i--) { %>
+					<% for (let i = 5; i >= 0; i--) { %>
 						<div class="col-12 col-sm-6 col-lg-3">
 						<section class = 'product-box'>
 								<figure class="product-box_image">
-									<img src="<%= lista[i].imagenes %>" alt="<%= lista[i].nombreproducto %>">
+									<img src="<%= lista[i].imagen %>" alt="<%= lista[i].nombreproducto %>">
 								</figure>
 								<article class="product-box_data">
 									<h2>
@@ -78,7 +78,7 @@
 		<div class="container products-wrapper">
 			<div class="row">
 				<div class="col-12">
-					<h2 class="products-title">Obras de arte recomendadas</h2>
+					<h2 class="products-title">Obras de arte más comentados</h2>
 				</div>
 
 				
@@ -87,7 +87,7 @@
 						<div class="col-12 col-sm-6 col-lg-3">
 						<section class = 'product-box'>
 								<figure class="product-box_image">
-									<img src="<%= lista2[i].imagenes %>" alt="<%= lista2[i].nombreproducto %>">
+									<img src="<%= lista2[i].imagen %>" alt="<%= lista2[i].nombreproducto %>">
 								</figure>
 								<article class="product-box_data">
 									<h2>
