--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -32,22 +32,20 @@
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
+					<% if(locals.user.id == datosUsuario.id) { %>
 					<h1 class="main-title"> <%= datosUsuario.username %>
+					
+					
+
 						<a href="/profileEdit/">
 							<i class="fas fa-cog"></i>
 						</a>
 					</h1>
-					<a class="btn mt-3 ml-4" href="">SEGUIR</a>
-				</div>
-				<div>
-					<ul class="">
-						<li>8 productos</li>
-						<li>2000 seguidores</li>
-						<li>300 comentarios</li>
-					</ul>
-				</div>
-			</div>
-		</div>
+						<% } else { %>
+
+							<h1 class="main-title"> <%= datosUsuario.username %> </h1>
+							<% } %>
+				
 	</section>
 	<!-- /Datos del usuario -->
 
