product add con foto

--- a/views/product-add.ejs
+++ b/views/product-add.ejs
@@ -33,7 +33,7 @@
 			<!-- Show the "ultimos" products -->
 			<form action="/products/add" method="POST" class="">
 				<label class="imagennn">IMAGEN</label>
-				<input type="file" name="imagenes" placeholder="FOTO DE PRODUCTO">
+				<input type="text" name="imagenes" placeholder="LINK DE FOTO DE PRODUCTO">
 				
 				
 				<input type="text" name="nombreproducto" placeholder="NOMBRE PRODUCTO">
