--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -39,7 +39,7 @@
 			<label class = "registroformlabel">CONTRASEÑA</label><input name="contrasena" type="password" placeholder="CONTRASEÑA" class = "registroinput">
 			<label class = "registroformlabel">FECHA DE NACIMIENTO</label><input name="fecha" type="date" placeholder="FECHA NACIMIENTO" class = "registroinput">
 			<label class = "registroformlabel">NUMERO DE DOCUMENTO</label><input name="dni" type="number" placeholder="NRO DOCUMENTO" class = "registroinput"> 
-			<label class="fotodeperfil">FOTO DE PERFIL</label><input type="text" name="fotodeperfil" placeholder="FOTO DE PERFIL"> 
+			<label class="fotodeperfil">LINK DE FOTO DE PERFIL</label><input type="text" name="fotodeperfil" placeholder="FOTO DE PERFIL"> 
 			<button type="submit" class = "registrobutton"> CONFIRMAR CAMBIOS </button>
 		</form>
 
