--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,10 @@
 						<div class="col-12 col-sm-6 col-lg-3">
 						<section class = 'product-box'>
 								<figure class="product-box_image">
-									<img src="<%= lista[i].imagenes %>" alt="<%= lista[i].nombreproducto %>">
+									<a href="/products/detalle/id/<%=lista[i].id%>">
+
+										<img src="<%= lista[i].imagenes %>" alt="<%= lista[i].nombreproducto %>">										</a>
+									
 								</figure>
 								<article class="product-box_data">
 									<h2>
