--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -62,7 +62,14 @@
 	<% if (datosUsuario.productos.length > 0) { %>
 
 		<% for (let i = datosUsuario.productos.length - 1; i >= 0; i--) { %>	<div class="col-12 col-sm-6 col-lg-3">
+			
 			<section class="product-box">
+				<figure class="product-box_image">
+					<a href="/products/detalle/id/<%=datosUsuario.productos[i].id%>">
+
+						<img src="<%= datosUsuario.productos[i].imagenes %>" alt="<%= datosUsuario.productos[i].nombreproducto %>">										</a>
+					
+				</figure>
 				<a href= "/products/detalle/id/<%=datosUsuario.productos[i].id%>">
 					<article class="product-box_data">
 						<h2> <%= datosUsuario.productos[i].nombreproducto%> </h2>
