--- a/views/product.ejs
+++ b/views/product.ejs
@@ -37,6 +37,9 @@
 										<a href="/products/delete">
 											<img src="/images/trashcan.png" class="trash-icon"></img>
 										</a>
+										<a href="/products/modify/<%= datosproducto.id %>">
+											<i class="fas fa-cog"></i>
+										</a>
 										<% } %>
 										
 						
