--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -32,7 +32,7 @@
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<% if(locals.user.id == datosUsuario.id) { %>
+					<% if(idUsuario == datosUsuario.id) { %>
 					<h1 class="main-title"> <%= datosUsuario.username %>
 					
 					
