--- a/views/search-results.ejs
+++ b/views/search-results.ejs
@@ -39,7 +39,7 @@
 				<section class="bloque">
 					<% if (lista != undefined && lista.length > 0) { %>
 						<% for (let i = lista.length - 1; i >= 0; i--) { %>
-							<div class="col-12 col-sm-6 col-lg-3">
+							<div class="col-12 col-lg-3">
 							<section class = 'product-box'>
 									<figure class="product-box_image">
 										<img src="<%= lista[i].imagenes %>" alt="<%= lista[i].nombreproducto %>">
