--- a/views/user-results.ejs
+++ b/views/user-results.ejs
@@ -38,10 +38,10 @@
 				<section class="bloque">
 					<% if (lista != undefined && lista.length > 0) { %>
 						<% for (let i = lista.length - 1; i >= 0; i--) { %>
-							<div class="col-12 col-sm-6 col-lg-3">
+							<div class="col-12 ">
 							<section class = 'product-box'>
 									<figure class="product-box_image">
-										<img src="<%= lista[i].imagen %>" alt="<%= lista[i].username %>">
+										<img src="<%= lista[i].fotodeperfil %>" alt="<%= lista[i].username %>">
 									</figure>
 									<article class="product-box_data">
 										<h2>
